[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tomd"
version = "1.0.0"
description = "Convert any document to Markdown from the command line"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "pypandoc>=1.11",
    "pymupdf4llm>=0.0.5",
    "rich>=13.0",
]

[project.scripts]
tomd = "tomd.cli:main"

[project.optional-dependencies]
dev = ["pytest"]
