[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tomd"
version = "1.0.0"
description = "Convert any document to Markdown from the command line"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pypandoc>=1.11",
    "marker-pdf>=1.5.0",
    "rich>=13.0",
]

[project.scripts]
tomd = "tomd.cli:main"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["tomd*"]
